--- a/public/404.html
+++ b/public/404.html
@@ -13,28 +13,28 @@
 
 	<!-- plugins -->
 	
-	<link rel="stylesheet" href="https://blairmunroakusa.wp.computer/plugins/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="https://summer2021.blairmunroakusa.wp.computer/plugins/bootstrap/bootstrap.min.css">
 	
-	<link rel="stylesheet" href="https://blairmunroakusa.wp.computer/plugins/themify-icons/themify-icons.css">
+	<link rel="stylesheet" href="https://summer2021.blairmunroakusa.wp.computer/plugins/themify-icons/themify-icons.css">
 	
-	<link rel="stylesheet" href="https://blairmunroakusa.wp.computer/plugins/magnific-popup/magnific-popup.css">
+	<link rel="stylesheet" href="https://summer2021.blairmunroakusa.wp.computer/plugins/magnific-popup/magnific-popup.css">
 	
-	<link rel="stylesheet" href="https://blairmunroakusa.wp.computer/plugins/slick/slick.css">
+	<link rel="stylesheet" href="https://summer2021.blairmunroakusa.wp.computer/plugins/slick/slick.css">
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anaheim%7cQuattrocento&#43;Sans:400,700&amp;display=swap">
 	
 
 	<!-- Main Stylesheet -->
 	
-	<link rel="stylesheet" href="https://blairmunroakusa.wp.computer/css/style.min.css" media="screen">
+	<link rel="stylesheet" href="https://summer2021.blairmunroakusa.wp.computer/css/style.min.css" media="screen">
 
 	<!-- Custom stylesheet - for your changes -->
 	
-  <link rel="stylesheet" href="https://blairmunroakusa.wp.computer/css/custom.min.css" media="screen">
+  <link rel="stylesheet" href="https://summer2021.blairmunroakusa.wp.computer/css/custom.min.css" media="screen">
 
 	<!--Favicon-->
-	<link rel="shortcut icon" href="https://blairmunroakusa.wp.computer/images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="https://blairmunroakusa.wp.computer/images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://summer2021.blairmunroakusa.wp.computer/images/favicon.png" type="image/x-icon">
+	<link rel="icon" href="https://summer2021.blairmunroakusa.wp.computer/images/favicon.png" type="image/x-icon">
 
 	
 
@@ -47,7 +47,7 @@
 <!-- preloader start -->
 <div class="preloader">
   
-  <img src="https://blairmunroakusa.wp.computer/images/logo.png" alt="preloader">
+  <img src="https://summer2021.blairmunroakusa.wp.computer/images/logo.png" alt="preloader">
   
 </div>
 <!-- preloader end -->
@@ -59,7 +59,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark">
 			<a class="navbar-brand p-0" href="/">
 				
-				<img class="lozad" data-src="https://blairmunroakusa.wp.computer/images/logo.png" alt="blairmunroakusa" height="42">
+				<img class="lozad" data-src="https://summer2021.blairmunroakusa.wp.computer/images/logo.png" alt="blairmunroakusa" height="42">
 				
 			</a>
 
@@ -149,8 +149,8 @@
 
 				<!-- copyright -->
 				<div class="copyright text-center">
-					<a href="https://blairmunroakusa.wp.computer/">
-						<img src="https://blairmunroakusa.wp.computer/images/logo.png" alt="blairmunroakusa" height="42" />
+					<a href="https://summer2021.blairmunroakusa.wp.computer/">
+						<img src="https://summer2021.blairmunroakusa.wp.computer/images/logo.png" alt="blairmunroakusa" height="42" />
 					</a>
 					<br>
 					<p>Copyright © Blair Munro 2021 blairmunroakusa, LLC, managed by World Peace Labs, inc :: generated using HUGO :: theme credit == <a href="https://themefisher.com">Themefisher</a> &amp; Developed by <a href="https://gethugothemes.com">Gethugothemes</a></p>
@@ -167,24 +167,24 @@
 
 <!-- JS Plugins -->
 
-<script src="https://blairmunroakusa.wp.computer/plugins/jquery/jquery.min.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/jquery/jquery.min.js"></script>
 
-<script src="https://blairmunroakusa.wp.computer/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/bootstrap/bootstrap.min.js"></script>
 
-<script src="https://blairmunroakusa.wp.computer/plugins/slick/slick.min.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/slick/slick.min.js"></script>
 
-<script src="https://blairmunroakusa.wp.computer/plugins/shuffle/shuffle.min.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/shuffle/shuffle.min.js"></script>
 
-<script src="https://blairmunroakusa.wp.computer/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-<script src="https://blairmunroakusa.wp.computer/plugins/lazy-load/lozad.min.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/lazy-load/lozad.min.js"></script>
 
-<script src="https://blairmunroakusa.wp.computer/plugins/google-map/map.js"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/plugins/google-map/map.js"></script>
 
 
 <!-- Main Script -->
 
-<script src="https://blairmunroakusa.wp.computer/js/script.min.b98b8dcfa3dc53b74ecf3cf8724a1f75b4d217da25463ff3d6a28fc4a09e965bf9818dfce85452f5fb478bce779ee8cc.js" integrity="sha384-uYuNz6PcU7dOzzz4ckofdbTSF9olRj/z1qKPxKCellv5gY386FRS9ftHi853nujM"></script>
+<script src="https://summer2021.blairmunroakusa.wp.computer/js/script.min.b98b8dcfa3dc53b74ecf3cf8724a1f75b4d217da25463ff3d6a28fc4a09e965bf9818dfce85452f5fb478bce779ee8cc.js" integrity="sha384-uYuNz6PcU7dOzzz4ckofdbTSF9olRj/z1qKPxKCellv5gY386FRS9ftHi853nujM"></script>
 
 
 
