--- a/public/en/index.html
+++ b/public/en/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><title>https://summer2021.blairmunroakusa.wp.computer/</title><link rel="canonical" href="https://summer2021.blairmunroakusa.wp.computer/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://summer2021.blairmunroakusa.wp.computer/" /></head></html>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <title>https://summer2021.blairmunroakusa.wp.computer/</title>
+    <link rel="canonical" href="https://summer2021.blairmunroakusa.wp.computer/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://summer2021.blairmunroakusa.wp.computer/">
+  </head>
+</html>
