update spelling convention, fix broken links, generate UPC & WPC posts, fix spotify

--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -55,7 +55,7 @@
 
 
 
-<p style="font-size:10px">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
+<p style="font-size:12px">COMMUNICATION STYLE DISCLAIMER: This webspace is a deliberate strategy meant to provide a transparent way of sharing my process/world. The purpose of this communication strategy is to determine the best way of going about doing things, by making my process/world accessible to people who may be able to help. Everything here is highly experimental.</p>
 
 
 <!-- Welcome Slider-->
@@ -190,19 +190,19 @@
 <section class="section section-bg about-2 padding-0" id="feature">
 	<div class="container-fluid">
 		<div class="row">
-			<h2 style="color:cyan;"><a href="https://timemachineforpeace.wp.computer/" target="_default">Click here to visit 'Time Machine For Peace' website.</a></h2>
+			<h2 style="color:cyan;"><a href="https://timemachineforpeace.blairmunroakusa.wp.computer/" target="_default">Click here to visit 'Time Machine For Peace' website.</a></h2>
 			<div class="col-lg-6 padding-0" style="background-image: url('https://summer2021.blairmunroakusa.wp.computer/images/about/about-business-man.webp'); background-size: cover; background-position: left center; background-repeat: no-repeat; min-height: 600px">
 				
 				<img src="https://summer2021.blairmunroakusa.wp.computer/images/about/about-business-man.webp" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url(https:\/\/summer2021.blairmunroakusa.wp.computer\/images\/about\/about-business-man.jpg)'">
 			</div>
 			<div class="col-lg-6">
 				<p style="font-size:17px; color:White;">
-				11/04/2021 - Unfortunately, the contents of this website were created under distress, for at the time I was undergoing an acute psychotic episode, product of a condition called 'schizoaffective disorder, bipolar type'. I have since stabilized, but I have chosen to leave this website up as a personal reminder to self. I still believe in the general ideas I was attempting to convey, and all ideas associated with this communication attempt (eg, the kickstarter, and time machine for peace homepage website), but overall, my ability to do so in an accessible and relatable manner was impaired. I can do better. I am currently in the process of creating a more accessible version of this website and the ideas contained within. For now however, it stands as-is.</p>
+				11/04/2021 - Unfortunately, the contents of this website were created under duress, for at the time I was undergoing an acute psychotic episode, product of a condition called 'schizoaffective disorder, bipolar type'. I have since stabilized, but I have chosen to leave this website up as a personal reminder to self. I still believe in the general ideas I was attempting to convey, and all ideas associated with this communication attempt (eg, the kickstarter, and time machine for peace homepage website), but overall, my ability to do so in an accessible and relatable manner was impaired. I can do better. I am currently in the process of creating a more accessible version of this website and the ideas contained within. For now however, it stands as-is.</p>
 				<p style="font-size:17px; color:White;">
 				The primary failure in this website's communication attempt was that it does not make it clear that this website is to serve as a template and example, to outline my personal world piece computer for others to 'get the idea' more easily. My intention is to host all my personal efforts and projects (the 'components' of my personal world piece computer') that I dedicate to generating peace in my individual world. I missed the point entirely. --Blair
 				</p>
 				<p style="font-size:13px; color:Yellow;">>> DISCLAIMER!</p>
-				<p style="font-size:13px; color:LawnGreen;">>> Content and presentation within separate websites (subdomains) in this webspace (wp.computer domain) will always be highly experimental and continually under construction, with a corresponding persistant degree of cringe.</p>
+				<p style="font-size:13px; color:LawnGreen;">>> Content and presentation within separate websites (subdomains) in this webspace (wp.computer and up.computer domains) will always be highly experimental and continually under construction, with a corresponding persistant degree of cringe.</p>
 				<p style="font-size:13px; color:Orange;">>> I want to build this domain into a collective online studio/gallery/exhibit/etc for experimental (and social) conceptual peace art/engineering/etc. If you want a space on this domain for your own experimental purposes, hit me up!</p>
 				<p style="font-size:13px; color:Pink;">>> Enjoy!</p>
 				<p style="font-size:13px; color:Red;">>> All content and ideas in this subdomain are draft quality. Please suggest revisions my making a change request or opening a new issue on <a href="https://github.com/wp-computer/">github</a>.</p>
@@ -344,7 +344,7 @@
 					<!-- Express About Yourself -->
 						<div class="content text-center">
 							<p>(First some music to set vibe...if you're into that.)</p>
-						<p><iframe src="https://open.spotify.com/embed/playlist/7IYJiee8JbX2LVLLm6VZ3V" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+						<p><iframe src="https://open.spotify.com/playlist/3uzIh9zwqjPDU0zHtK5MBa?si=d3cbb461aae047a8" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
 						<a href="" target="_blank"></a>
 					</div>
 				</div>
