make astudyinpeace html accessible and render properly

--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -344,7 +344,7 @@
 					<!-- Express About Yourself -->
 						<div class="content text-center">
 							<p>(First some music to set vibe...if you're into that.)</p>
-						<p><iframe src="https://open.spotify.com/playlist/3uzIh9zwqjPDU0zHtK5MBa?si=d3cbb461aae047a8" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+						<p><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3uzIh9zwqjPDU0zHtK5MBa" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p>
 						<a href="" target="_blank"></a>
 					</div>
 				</div>
