--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
 	<div class="block">
 		
-		<h1>CONCEPTUAL PEACE ART</h1>
+		<h1>WELCOME TO MY WORLD PIECE COMPUTER (CONCEPTUAL PEACE ART)</h1>
 		<p>I&rsquo;m a conceptual peace artist / engineer formally trained in electrical engineering. My art fuses concepts from mathematics, physics, science, engineering, and applies them by analogy in an educational manner to make better sense of our Human experience. I try to make this aesthetic and functional in order to liberate useful technical constructs to empower non-technical people to improve their lives in fun ways. I&rsquo;m a fierce advocate for erecting a computational global peace system. </p>
 		<h2>Let&rsquo;s invent a time machine for peace.</h2>
 		<p1>blairmunroakusa, LLC is licensed in the State of Alaska to conduct ANY LAWFUL business under primary NAICS code 711510: Independent Artists, Writers, and Performers.</p1>
@@ -186,7 +186,7 @@
 				
 				<div class="content-block">
 					<h2>Hi! I&rsquo;m Blair.</h2>
-					<p><strong>PERRSONAL OVERVIEW</strong></p>
+					<p><strong>PERSONAL OVERVIEW</strong></p>
 					<p>All I want to do is make new and better life with people.</p>
 					<p>I think that the best way to do this is by coming up with ways to include everybody. I think that to make new life, we should collaborate and do art. I think that to make life better, we should do art in a way that helps us solve our hardest problems together.</p>
 					<p>In terms of solving our hardest problems, my studies in physics led me to conclude that our hard problems all revolve around the way we think about time&mdash;both the language we use and the ideas we hold on to. Time is (okay fine, <em>effectively</em>) irreversible according to thermodynamics, and the second law of thermodynamics tells us (it tells me at least) that no matter how much energy we put into solving a hard problem, new and more problems always crop up in its place. So it really isn&rsquo;t about solving all the problems; it is more about finding the best way to go about solving new problems, as they crop up in real-time. It is more about asking &lsquo;Is peace a result, or is it more like a process?&rsquo; Process first.</p>
@@ -345,7 +345,7 @@
 					<!-- Express About Yourself -->
 						<div class="content text-center">
 							<p>(First some music to set vibe...if you're into that.)</p>
-						<p><iframe src="https://open.spotify.com/playlist/3uzIh9zwqjPDU0zHtK5MBa?si=d3cbb461aae047a8" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
+						<p><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3uzIh9zwqjPDU0zHtK5MBa" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p>
 						<a href="" target="_blank"></a>
 					</div>
 				</div>
